3-Kubernetes/27-Additional-topics/setup-skooner-dashboard/k8s-manifests/skooner-ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skooner
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: skooner
              servicePort: 80
